--- a/inicio.html
+++ b/inicio.html
@@ -40,7 +40,7 @@
         <p>Aqui está o resumo dos seus investimentos.</p>
     </header>
 
-    <section id="dashboard" class="stats-grid">
+<section id="dashboard" class="stats-grid">
         <div class="stat-card-new">
             <div class="stat-icon">👥</div>
             <div class="stat-info">
@@ -62,6 +62,30 @@
             <div class="stat-info">
                 <span class="stat-label">Total a Receber</span>
                 <span id="stat-total-receive" class="stat-value">R$ 0,00</span>
+            </div>
+        </div>
+
+        <div class="stat-card-new" style="border-left: 4px solid #2ecc71;">
+            <div class="stat-icon">💼</div>
+            <div class="stat-info">
+                <span class="stat-label">Qtd. Repasses</span>
+                <span id="stat-repasse-qtd" class="stat-value">0</span>
+            </div>
+        </div>
+
+        <div class="stat-card-new" style="border-left: 4px solid #2ecc71;">
+            <div class="stat-icon">💵</div>
+            <div class="stat-info">
+                <span class="stat-label">Total Emprestado Repasse</span>
+                <span id="stat-repasse-lent" class="stat-value">R$ 0,00</span>
+            </div>
+        </div>
+
+        <div class="stat-card-new" style="border-left: 4px solid #2ecc71;">
+            <div class="stat-icon">🚀</div>
+            <div class="stat-info">
+                <span class="stat-label">Total Lucro Repasse</span>
+                <span id="stat-repasse-lucro" class="stat-value">R$ 0,00</span>
             </div>
         </div>
     </section>
@@ -94,6 +118,7 @@
 </body>
 
 </html>
+
 
 
 
