--- a/inicio.html
+++ b/inicio.html
@@ -40,7 +40,7 @@
         <p>Aqui está o resumo dos seus investimentos.</p>
     </header>
 
-<section id="dashboard" class="stats-grid">
+    <section id="dashboard-clientes" class="stats-grid">
         <div class="stat-card-new">
             <div class="stat-icon">👥</div>
             <div class="stat-info">
@@ -64,8 +64,16 @@
                 <span id="stat-total-receive" class="stat-value">R$ 0,00</span>
             </div>
         </div>
+    </section>
 
-        <div class="stat-card-new" style="border-left: 4px solid #2ecc71;">
+    <hr style="border:0; border-top:1px solid #333; margin: 30px 0;">
+
+    <header class="welcome-banner">
+        <p>Aqui está o resumo dos seus repasses.</p>
+    </header>
+
+    <section id="dashboard-repasse" class="stats-grid">
+        <div class="stat-card-new" style="border-top: 3px solid #2ecc71;">
             <div class="stat-icon">💼</div>
             <div class="stat-info">
                 <span class="stat-label">Qtd. Repasses</span>
@@ -73,7 +81,7 @@
             </div>
         </div>
 
-        <div class="stat-card-new" style="border-left: 4px solid #2ecc71;">
+        <div class="stat-card-new" style="border-top: 3px solid #2ecc71;">
             <div class="stat-icon">💵</div>
             <div class="stat-info">
                 <span class="stat-label">Total Emprestado Repasse</span>
@@ -81,7 +89,7 @@
             </div>
         </div>
 
-        <div class="stat-card-new" style="border-left: 4px solid #2ecc71;">
+        <div class="stat-card-new" style="border-top: 3px solid #2ecc71;">
             <div class="stat-icon">🚀</div>
             <div class="stat-info">
                 <span class="stat-label">Total Lucro Repasse</span>
@@ -90,7 +98,6 @@
         </div>
     </section>
 </main>
-
 <nav class="mobile-nav">
     <a href="inicio.html" class="nav-item">
         <span class="icon">🏠</span>
@@ -118,6 +125,7 @@
 </body>
 
 </html>
+
 
 
 
