--- a/inicio.html
+++ b/inicio.html
@@ -99,22 +99,18 @@
     </section>
 </main>
 <nav class="mobile-nav">
-    <a href="inicio.html" class="nav-item">
-        <span class="icon">🏠</span>
-        <span class="label">Início</span>
-    </a>
     <a href="clientes.html" class="nav-item">
         <span class="icon">👥</span>
         <span class="label">Clientes</span>
     </a>
-<!--        <a href="funcionarios.html" class="nav-item">
-        <span class="icon">💼</span>
-        <span class="label">Repasse</span>
-    </a> -->
-<!--<a href="aviso.html" class="nav-item">
-        <span class="icon">🔔</span>
-        <span class="label">Avisos</span>
-    </a> -->
+
+    <a href="inicio.html" class="nav-item nav-item-central">
+        <div class="central-circle">
+            <span class="icon">🏠</span>
+        </div>
+        <span class="label">Início</span>
+    </a>
+
     <a href="perfil.html" class="nav-item">
         <span class="icon">👤</span>
         <span class="label">Perfil</span>
@@ -126,6 +122,7 @@
 </body>
 
 </html>
+
 
 
 
