--- a/aviso.html
+++ b/aviso.html
@@ -66,18 +66,18 @@
 </main>
 
 <nav class="mobile-nav">
-    <a href="inicio.html" class="nav-item">
-        <span class="icon">🏠</span>
-        <span class="label">Início</span>
-    </a>
     <a href="clientes.html" class="nav-item">
         <span class="icon">👥</span>
         <span class="label">Clientes</span>
     </a>
-        <a href="funcionarios.html" class="nav-item">
+    <a href="inicio.html" class="nav-item">
+        <span class="icon">🏠</span>
+        <span class="label">Início</span>
+    </a>
+<!--        <a href="funcionarios.html" class="nav-item">
         <span class="icon">💼</span>
         <span class="label">Repasse</span>
-    </a>
+    </a> -->
 <!--<a href="aviso.html" class="nav-item">
         <span class="icon">🔔</span>
         <span class="label">Avisos</span>
@@ -92,5 +92,6 @@
 </body>
 
 </html>
+
 
 
