--- a/clientes.html
+++ b/clientes.html
@@ -255,14 +255,18 @@
         <span class="icon">👥</span>
         <span class="label">Clientes</span>
     </a>
-
-    <a href="inicio.html" class="nav-item nav-item-central">
-        <div class="central-circle">
-            <span class="icon">🏠</span>
-        </div>
+    <a href="inicio.html" class="nav-item">
+        <span class="icon">🏠</span>
         <span class="label">Início</span>
     </a>
-
+<!--        <a href="funcionarios.html" class="nav-item">
+        <span class="icon">💼</span>
+        <span class="label">Repasse</span>
+    </a> -->
+<!--<a href="aviso.html" class="nav-item">
+        <span class="icon">🔔</span>
+        <span class="label">Avisos</span>
+    </a> -->
     <a href="perfil.html" class="nav-item">
         <span class="icon">👤</span>
         <span class="label">Perfil</span>
@@ -272,6 +276,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
