--- a/clientes.html
+++ b/clientes.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="inicio.html"><span class="icon">🏠</span> <span class="text">INÍCIO</span></a></li>
                 <li><a href="clientes.html" class="active"><span class="icon">👥</span> <span class="text">CLIENTES</span></a></li>
-<!--            <li><a href="funcionarios.html"><span class="icon">💼</span> <span class="text">REPASSE</span></a></li> -->
+                <li><a href="funcionarios.html"><span class="icon">💼</span> <span class="text">REPASSE</span></a></li>
 <!--            <li><a href="aviso.html"><span class="icon">🔔</span> <span class="text">AVISO</span></a></li>  -->
                 <li><a href="perfil.html"><span class="icon">👤</span> <span class="text">PERFIL</span></a></li>
             </ul>
@@ -259,10 +259,10 @@
         <span class="icon">🏠</span>
         <span class="label">Início</span>
     </a>
-<!--        <a href="funcionarios.html" class="nav-item">
+    <a href="funcionarios.html" class="nav-item">
         <span class="icon">💼</span>
         <span class="label">Repasse</span>
-    </a> -->
+    </a>
 <!--<a href="aviso.html" class="nav-item">
         <span class="icon">🔔</span>
         <span class="label">Avisos</span>
@@ -276,6 +276,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
