--- a/funcionarios.html
+++ b/funcionarios.html
@@ -21,7 +21,7 @@
                 <li><a href="inicio.html"><span class="icon">🏠</span> <span class="text">INÍCIO</span></a></li>
                 <li><a href="clientes.html"><span class="icon">👥</span> <span class="text">CLIENTES</span></a></li>
                 <li><a href="funcionarios.html" class="active"><span class="icon">💼</span> <span class="text">REPASSE</span></a></li>
-                <li><a href="perfil.html"><span class="icon">👤</span> <span class="text">PERFIL</span></a></li>
+    <!--            <li><a href="perfil.html"><span class="icon">👤</span> <span class="text">PERFIL</span></a></li> -->
             </ul>
         </nav>
         <div class="sidebar-footer">
@@ -133,10 +133,10 @@
         <span class="icon">🏠</span>
         <span class="label">Início</span>
     </a>
-<!--        <a href="funcionarios.html" class="nav-item">
+    <a href="funcionarios.html" class="nav-item">
         <span class="icon">💼</span>
         <span class="label">Repasse</span>
-    </a> -->
+    </a>
 <!--<a href="aviso.html" class="nav-item">
         <span class="icon">🔔</span>
         <span class="label">Avisos</span>
@@ -150,4 +150,5 @@
 <script src="js/funcionarios.js"></script>
 </body>
 </html>
+
 
