--- a/inicio.html
+++ b/inicio.html
@@ -115,10 +115,10 @@
         <span class="icon">🔔</span>
         <span class="label">Avisos</span>
     </a> -->
-    <a href="perfil.html" class="nav-item">
+<!--    <a href="perfil.html" class="nav-item">
         <span class="icon">👤</span>
         <span class="label">Perfil</span>
-    </a>
+    </a> -->
 </nav>
 
 <script src="script.js"></script>
@@ -126,6 +126,7 @@
 </body>
 
 </html>
+
 
 
 
