--- a/clientes.html
+++ b/clientes.html
@@ -267,15 +267,16 @@
         <span class="icon">🔔</span>
         <span class="label">Avisos</span>
     </a> -->
-    <a href="perfil.html" class="nav-item">
+<!--    <a href="perfil.html" class="nav-item">
         <span class="icon">👤</span>
         <span class="label">Perfil</span>
-    </a>
+    </a> -->
 </nav>
 
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
