--- a/funcionarios.html
+++ b/funcionarios.html
@@ -141,14 +141,15 @@
         <span class="icon">🔔</span>
         <span class="label">Avisos</span>
     </a> -->
-    <a href="perfil.html" class="nav-item">
+<!--    <a href="perfil.html" class="nav-item">
         <span class="icon">👤</span>
         <span class="label">Perfil</span>
-    </a>
+    </a> -->
 </nav>
 
 <script src="js/funcionarios.js"></script>
 </body>
 </html>
+
 
 
