--- a/inicio.html
+++ b/inicio.html
@@ -40,9 +40,9 @@
         <h2 id="welcomeMessage">Olá! 👋</h2>
         <p>Aqui está o resumo dos seus investimentos.</p>
     </div>
-    <button onclick="limparCacheSistema()" style="background: rgba(255,255,255,0.1); border: 1px solid rgba(255,255,255,0.2); color: white; padding: 8px 12px; border-radius: 8px; cursor: pointer; font-size: 12px; display: flex; align-items: center; gap: 5px;">
-        🔄 <span class="text-btn">Atualizar</span>
-    </button>
+<button onclick="limparCacheSistema()" style="background: rgba(255,255,255,0.1); border: 1px solid rgba(255,255,255,0.2); color: white; padding: 8px 12px; border-radius: 8px; cursor: pointer; font-size: 12px; display: flex; align-items: center; gap: 5px;">
+    🔄 <span class="text-btn">Atualizar Sistema</span>
+</button>
 </header>
 
     <section id="dashboard-clientes" class="stats-grid">
@@ -131,6 +131,7 @@
 </body>
 
 </html>
+
 
 
 
