--- a/inicio.html
+++ b/inicio.html
@@ -126,11 +126,12 @@
     </a> -->
 </nav>
 
-<script src="script.js"></script>
-<script src="js/funcionarios.js"></script>
+<script src="script.js?v=2.0"></script>
+<script src="js/funcionarios.js?v=2.0"></script>
 </body>
 
 </html>
+
 
 
 
