--- a/funcionarios.html
+++ b/funcionarios.html
@@ -147,9 +147,10 @@
     </a> -->
 </nav>
 
-<script src="js/funcionarios.js"></script>
+<script src="js/funcionarios.js?v=2.0"></script>
 </body>
 </html>
+
 
 
 
